add unit test for spatial-index-rtree insert and query

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,7 +16,8 @@ set(SOURCES
         Generator
         RTreeBulkLoad
         RTreeLoad
-        RTreeQuery)
+        RTreeQuery
+        RTreeInsertAndQuery)
 
 
 foreach(test ${SOURCES})
